--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-// index.html placeholder
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Toolio AI</title>
+  </head>
+  <body>
+    <div id="root"></div> <!-- This is where React mounts -->
+  </body>
+</html>
